--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,55 @@ a {
   box-sizing: border-box;
 }
 
+fieldset {
+  display: inline-flex;
+  flex-direction: column;
+  border: none;
+  margin: 7px 0 0 0;
+}
+p {
+  margin: 0;
+  padding: 0;
+}
+
+label > p {
+  display: block;
+  margin: 0 0 0.5em 0;
+  font-size: .9em;
+  font-weight: 500;
+}
+
+textarea {
+  display: block;
+  padding: .5em;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+input, select{
+  display: block;
+  padding: .5em;
+  width: 100%;
+  height: 35px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+input[type='text'] {
+  padding-left: 1em;
+  font-size: 0.8em;
+}
+
+input[type='text']:focus,
+input[type='text']:active,
+textarea:focus,
+textarea:active,
+select:focus,
+select:active {
+  font-style: normal;
+  outline: 1px solid rgb(0, 217, 255);
+}
+
