--- a/styles/anchors/Nav.module.css
+++ b/styles/anchors/Nav.module.css
@@ -38,6 +38,10 @@
     max-height: 100px;
 }
 
+.buttomBar nav {
+    width: auto;
+}
+
 .bottomBar .logo a{
     display: flex;
     align-items: center;
@@ -48,6 +52,7 @@
     height: 100%;
     max-width: 400px;
     min-height: 100px;
+    max-height: 100px;
 }
 
 .bottomBar .logo img {
@@ -101,12 +106,12 @@
     .bottomBar {
         flex-direction: column;
         width: 100%;
-        max-height: 300px;
+        max-height: 250px;
     }
     .bottomBar nav {
         flex-direction: row;
-        width: 100%;
-        max-height: 300px;
+        width: auto;
+        max-height: 250px;
         align-items: center;
         justify-content: center;
 
@@ -117,6 +122,7 @@
         width: 100%;
         max-height: 100px;
         justify-content: center;
+        margin: 0;
         padding: 0;
     }
     .bottomBar nav ul li {
