--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,9 @@ fieldset {
   flex-direction: column;
   border: none;
   margin: 7px 0 0 0;
+  width: 100%;
 }
+
 p {
   margin: 0;
   padding: 0;
@@ -66,4 +68,3 @@ select:active {
   font-style: normal;
   outline: 1px solid rgb(0, 217, 255);
 }
-
