--- a/styles/anchors/Footer.module.css
+++ b/styles/anchors/Footer.module.css
@@ -57,3 +57,22 @@
     border-right: 1px solid white;
 
 }
+
+
+.logo a{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+
+    margin: 10px 0;
+}
+
+.logo img {
+    width: 50px;
+    height: 50px;
+}
+.logo h1 {
+    margin: 0;
+    margin-left: 10px;
+    font-size: 1.2rem;
+}
