--- a/styles/anchors/Nav.module.css
+++ b/styles/anchors/Nav.module.css
@@ -32,41 +32,32 @@
     padding: 0px 50px 0px 50px;
 
     width: 100%;
-    height: 100%;
+    height: 100px;
 
-    min-height: 60px;
-    max-height: 100px;
+    min-height: 100px;
+    max-height: 150px;
 }
 
 .buttomBar nav {
     width: auto;
 }
 
-.bottomBar .logo a{
+.logo a{
     display: flex;
     align-items: center;
     flex-direction: row;
 
-
-    width: 100%;
-    height: 100%;
-    max-width: 400px;
-    min-height: 100px;
-    max-height: 100px;
+    margin: 10px 0;
 }
 
-.bottomBar .logo img {
-    width: 100%;
-    height: 100%;
-
-    max-width: 75px;
-    max-height: 75px;
-
-    aspect-ratio: 1;
+.logo img {
+    width: 50px;
+    height: 50px;
 }
-.bottomBar .logo h1 {
-    font-size: 1.2rem;
+.logo h1 {
     margin: 0;
+    margin-left: 10px;
+    font-size: 1.2rem;
 }
 
 .bottomBar nav ul {
@@ -93,6 +84,65 @@
     min-height: 80px;
 }
 
+.extendedImage {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    min-height: 500px;
+    max-height: 500px;
+    background-color: rgb(23, 23, 23);
+}
+
+.extendedImage img {
+    width: 100%;
+    height: 100%;
+    
+    max-width: 700px;
+    max-height: 500px;
+
+    background-color: rgb(206, 206, 206);
+}
+
+.subNav {
+    display: inline-flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    justify-self: flex-start;
+
+    width: 80%;
+    height: 100%;
+
+    min-height: 50px;
+    padding: 0px 50px;
+}
+.subNav ul {
+    width: auto;
+    height: auto;
+
+    min-height: 50px;
+    margin: inherit 0;
+}
+.subNav ul li {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 10px;
+    
+    width: auto;
+    height: 100%;
+
+    min-height: 80px;
+}
+
+.subNav ul li:nth-child(n+2)::before {
+    content: "/";
+    display: inline-block;
+    margin: 0 20px 0 0;
+}
 
 @media (max-width: 720px) {
     .navContainer{
@@ -105,8 +155,12 @@
     }
     .bottomBar {
         flex-direction: column;
+        padding: 10px 0px;
         width: 100%;
-        max-height: 250px;
+        height: auto;
+    }
+    .bottomBar br {
+        display: none;
     }
     .bottomBar nav {
         flex-direction: row;
