--- a/styles/pages/Default.module.css
+++ b/styles/pages/Default.module.css
@@ -1,5 +1,3 @@
-
-
 .container {
     padding: 0;
 }
@@ -10,7 +8,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: inherit;
   align-items: center;
 }
   
