--- a/styles/pages/Inquiry.module.css
+++ b/styles/pages/Inquiry.module.css
@@ -1,3 +1,4 @@
+
 .customForm {
     width: 80%;
     max-width: 800px;
@@ -8,6 +9,10 @@
     display: inline-flex;
     flex-direction: column;
     
+}
+.customForm h2 {
+    text-align: center;
+    font-size: 1.5rem;
 }
 
 .requiredDec {
