--- a/styles/anchors/Nav.module.css
+++ b/styles/anchors/Nav.module.css
@@ -94,16 +94,23 @@
     min-height: 500px;
     max-height: 500px;
     background-color: rgb(23, 23, 23);
+
+    overflow: hidden;
 }
 
 .extendedImage img {
     width: 100%;
     height: 100%;
     
-    max-width: 700px;
-    max-height: 500px;
-
     background-color: rgb(206, 206, 206);
+    filter: brightness(0.4);
+}
+
+.extendedImage h1 {
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    -webkit-text-stroke: 1px #fff;
 }
 
 .subNav {
@@ -122,9 +129,6 @@
 .subNav ul {
     width: auto;
     height: auto;
-
-    min-height: 50px;
-    margin: inherit 0;
 }
 .subNav ul li {
     display: inline-flex;
@@ -133,9 +137,7 @@
     padding: 0px 10px;
     
     width: auto;
-    height: 100%;
-
-    min-height: 80px;
+    height: auto;
 }
 
 .subNav ul li:nth-child(n+2)::before {
