--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -12,3 +12,83 @@
   align-items: center;
 }
 
+.main h2 {
+  font-size: 2rem;
+  font-weight: lighter;
+}
+
+.imageBody {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  
+  width: 80%;
+}
+
+.imagePanels {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 1rem;
+
+  width: 400px;
+  height: 300px;
+
+  position: relative;
+  border-radius: 4px;
+  overflow: hidden;
+  resize: none;
+}
+
+.imagePanels img {
+  width: 400px;
+  height: 300px;
+  object-fit: cover;
+  filter: brightness(0.6);
+  transition: ease-in-out 0.3s;
+}
+
+.imagePanels img:hover {
+  filter: brightness(0.4);
+}
+
+.imagePanels h3 {
+  font-size: 1.5rem;
+  position: absolute;
+  bottom: 5%;
+  -webkit-text-stroke: 0.5px rgb(141, 141, 141);
+  text-decoration: underline white;
+  text-underline-offset: 4px;
+  text-decoration-skip-ink: auto;
+}
+
+.subBody {
+  display: flex;
+  flex-direction: column;
+
+  width: 70%;
+  height: 100%;
+  margin: 40px 0;
+}
+
+.subBody h3{
+  padding: 0;
+  margin: 0 0 20px 0;
+}
+
+.offsetText {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.offsetText p {
+  width: 99%;
+  height: auto;
+  margin: 0 0 20px 0;
+}
