--- a/styles/anchors/Nav.module.css
+++ b/styles/anchors/Nav.module.css
@@ -124,7 +124,7 @@
     height: 100%;
 
     min-height: 50px;
-    padding: 0px 50px;
+    margin: 0 20px 10px 0;
 }
 .subNav ul {
     width: auto;
