--- a/styles/components/Search.module.css
+++ b/styles/components/Search.module.css
@@ -66,8 +66,27 @@
     display: inline-flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     width: auto;
+    
+    margin: 0 5px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 
-    padding: 0 10px 10px 0;
+    transition: ease-in-out 0.2s;
+}
+
+.filter:hover {
+    box-shadow: 0px 0px 4px rgb(255, 174, 0);
+}
+
+.filter h5 {
+    font-weight: lighter;
+    width: 100%;
+    text-align: center;
+
+    padding: 0%;
+    margin: 0%;
 }
