--- a/styles/pages/Article.module.css
+++ b/styles/pages/Article.module.css
@@ -11,7 +11,7 @@
     border: 1px solid #ccc;
 
     padding: 20px 20px;
-    margin: 20px 0 40px 0;
+    margin: 20px 0;
 
     overflow-y:scroll;
     overflow-x:hidden;
@@ -23,7 +23,7 @@
 
     border: 1px solid #ccc;
 
-    padding: 20px;
+    padding: 30px;
     margin-bottom: 20px;
 }
 .article h2 {
