--- a/styles/pages/Program.module.css
+++ b/styles/pages/Program.module.css
@@ -1,5 +1,3 @@
-
-
 .programContainer {
     display: inline-flex;
     flex-direction: column;
@@ -11,7 +9,7 @@
     border: 1px solid #ccc;
 
     padding: 20px 20px;
-    margin: 20px 0 40px 0;
+    margin: 20px 0;
 
     overflow-y:scroll;
     overflow-x:hidden;
@@ -23,7 +21,7 @@
 
     border: 1px solid #ccc;
 
-    padding: 20px;
+    padding: 20px; 
     margin-bottom: 20px;
 }
 .program h2 {
