--- a/styles/anchors/Nav.module.css
+++ b/styles/anchors/Nav.module.css
@@ -90,7 +90,8 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-
+    position: relative;
+    
     min-height: 500px;
     max-height: 500px;
     background-color: rgb(23, 23, 23);
