--- a/styles/components/Search.module.css
+++ b/styles/components/Search.module.css
@@ -1,12 +1,13 @@
 .searchContainer{
     width: 80%;
-    height: 100vh;
+    height: fit-content;
     max-width: 1000px;
 
     display: inline-flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
     
     border-radius: 4px;
     border: 1px solid #ccc;
