--- a/styles/components/Search.module.css
+++ b/styles/components/Search.module.css
@@ -1,13 +1,11 @@
 .searchContainer{
     width: 80%;
-    height: fit-content;
     max-width: 1000px;
+    min-height: 700px;
 
     display: inline-flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-
     
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -20,7 +18,7 @@
     display: inline-flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
 
     margin: 40px 0 0 0;
@@ -47,7 +45,7 @@
 }
 
 .searchHead input[type=text] {
-    width: 80%;
+    width: 70%;
     height: auto;
     margin: 10px 0;
 }
@@ -90,4 +88,18 @@
 
     padding: 0%;
     margin: 0%;
+}
+
+@media screen and (max-width: 768px) {
+    .searchHead{
+        flex-direction: column;
+        align-items: center;
+    }
+    .searchHead input[type=text] {
+        width: 100%;
+        margin: 10px 0;
+    }
+    .searchContainer {
+        min-height: auto;
+    }
 }
