--- a/styles/pages/Article.module.css
+++ b/styles/pages/Article.module.css
@@ -1,21 +1,20 @@
-
-
 .articleContainer {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
     
     width: 90%;
-    height: 80%;
-    min-height: 50vh;
+    height: 100%;
+    min-height: 700px;
     
     border: 1px solid #ccc;
 
-    padding: 20px 20px;
-    margin: 20px 0;
+    padding: 20px;
+    margin: 20px 40px;
 
     overflow-y:scroll;
     overflow-x:hidden;
+
 }
 
 .article {
@@ -24,7 +23,7 @@
 
     border: 1px solid #ccc;
 
-    padding: 30px;
+    padding: 30px 30px 20px 30px;
     margin-bottom: 20px;
 }
 .article h2 {
@@ -52,8 +51,46 @@
     font-weight: 500;
     cursor: pointer;   
     
-    margin-top: 10px;
-    padding: 7px 20px;
+    margin-top: 15px;
+    padding: 10px 20px;
 
     float: right;
+}
+
+
+@media screen and (max-width: 768px) {
+    .article h2 {
+        font-size: 15px;
+        font-weight: bold;
+    }
+    .article h6 {
+        font-weight: lighter;
+        margin: 10px 0 0 0;
+    }
+    .article p {
+        font-size: 13px;
+        margin: 10px 0 0 0;
+    }
+    .article button {
+        font-size: .7em;
+    }
+
+    .articleContainer{
+        display: inline-flex;
+        flex-direction: column;
+
+        width: 100%;
+        padding: 5px;
+        margin: 0;
+    }
+    .article{
+        width: 100%;
+        margin: 0 0 5px 0;
+    }
+    
+}
+@media screen and (max-width: 425px) {
+    .article button {
+        width: 100%;
+    }
 }
