--- a/styles/pages/Default.module.css
+++ b/styles/pages/Default.module.css
@@ -3,13 +3,17 @@
 }
   
 .main {
-  min-height: 80vh;
+  min-height: 70vh;
   padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: inherit;
+  justify-content: center;
   align-items: center;
 }
   
-  
+  @media screen and (max-width: 768px) {
+    .main{
+      min-height: auto;
+    }
+  }
