--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -2,19 +2,15 @@
   padding: 0;
 }
 
-.main {
-  min-height: 80vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
+.wrapper {
+  display: inline-flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  width: 80%;
 }
 
-.main h2 {
+.wrapper h2 {
   font-size: 2rem;
-  font-weight: lighter;
 }
 
 .imageBody {
@@ -24,7 +20,9 @@
   align-items: center;
   flex-wrap: wrap;
   
-  width: 80%;
+  width: 100%;
+
+  max-width: 1000px;
 }
 
 .imagePanels {
@@ -68,10 +66,12 @@
 .subBody {
   display: flex;
   flex-direction: column;
-
-  width: 70%;
+  
+  width: 100%;
   height: 100%;
   margin: 40px 0;
+
+  max-width: 1000px;
 }
 
 .subBody h3{
