--- a/styles/pages/Program.module.css
+++ b/styles/pages/Program.module.css
@@ -4,11 +4,12 @@
     align-items: center;
     
     width: 90%;
-    height: 80%;
+    height: 100%;
+    min-height: 700px;
     
     border: 1px solid #ccc;
 
-    padding: 20px 20px;
+    padding: 20px;
     margin: 20px 0;
 
     overflow-y:scroll;
@@ -53,4 +54,39 @@
     padding: 7px 20px;
 
     float: right;
+}
+
+@media screen and (max-width: 768px) {
+    .program h2 {
+        font-size: 15px;
+        font-weight: bold;
+    }
+    .program p {
+        font-size: 13px;
+        margin: 10px 0 0 0;
+    }
+    .program button {
+        font-size: .7em;
+    }
+    
+    .programContainer{
+        display: inline-flex;
+        flex-direction: column;
+
+        width: 100%;
+        min-height: auto;
+        padding: 5px;
+        margin: 0;
+    }
+    .program{
+        width: 100%;
+        margin: 0 0 5px 0;
+    }
+
+    
+}
+@media screen and (max-width: 425px) {
+    .program button {
+        width: 100%;
+    }
 }
