--- a/styles/pages/Programs.module.css
+++ b/styles/pages/Programs.module.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+
     width: 80%;
+    max-width: 1000px;
 
     margin: 40px 0;
 }
@@ -15,6 +17,7 @@
     justify-content: center;
     align-content: center;
 
+    width: 80%;
     margin: 10px 0 20px 0;
 }
 
@@ -30,6 +33,11 @@
     color: red;
 }
 
+.programWrapper img {
+    width: 100%;
+    height: auto;
+    max-width: 800px;
+}
 .focus {
     width: 150px;
     height: 150px;
@@ -54,6 +62,7 @@
 .focus img {
     width: 50px;
     height: 50px;
+    max-width: 50px;
 }
 .focus h4 {
     font-weight: bold;
