--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   width: 80%;
+  max-width: 800px;
 }
 
 .wrapper h2 {
@@ -32,7 +33,7 @@
   align-items: center;
   margin: 1rem 1rem;
 
-  width: 400px;
+  width: 360px;
   height: 300px;
 
   position: relative;
